Rebrand to Deskon with automatic language switching

--- a/flutter/macos/Runner/Info.plist
+++ b/flutter/macos/Runner/Info.plist
@@ -29,7 +29,7 @@
 			<string>kr.on1.desk</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>onremote</string>
+				<string>deskon</string>
 			</array>
 		</dict>
 	</array>
