--- a/flutter/android/build.gradle
+++ b/flutter/android/build.gradle
@@ -14,6 +14,23 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
+// Force all subprojects to use Java 17 for both Java and Kotlin compilation
+subprojects {
+    afterEvaluate { project ->
+        // Set Java compile compatibility (task-level, doesn't affect classpath)
+        project.tasks.withType(JavaCompile).configureEach {
+            sourceCompatibility = JavaVersion.VERSION_17
+            targetCompatibility = JavaVersion.VERSION_17
+        }
+        // Set Kotlin JVM target
+        project.tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+            kotlinOptions {
+                jvmTarget = "17"
+            }
+        }
+    }
+}
+
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
