--- a/flutter/android/app/src/main/AndroidManifest.xml
+++ b/flutter/android/app/src/main/AndroidManifest.xml
@@ -83,16 +83,19 @@
         <activity
             android:name=".PermissionRequestTransparentActivity"
             android:excludeFromRecents="true"
+            android:exported="false"
             android:theme="@style/Transparent" />
 
         <service
             android:name=".MainService"
             android:enabled="true"
+            android:exported="false"
             android:foregroundServiceType="mediaProjection" />
 
         <service
             android:name=".FloatingWindowService"
-            android:enabled="true" />
+            android:enabled="true"
+            android:exported="false" />
 
         <!--
  Don't delete the meta-data below.
